--- a/setup.cfg
+++ b/setup.cfg
@@ -21,12 +21,12 @@ install_requires =
 	flask==3.0.3
 	dash==2.17.0
 	dash_bootstrap_components==1.6.0
-	matplotlib>=3.5.2
+	# matplotlib>=3.5.2
 	numpy>=1.22, <2.0
 	pandas
 	pdfplumber
 	pydicom
-	PyQt5
+	# PyQt5
 	PyYAML
 	scikit_image
 	scipy>=1.10.0
